// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`issue-6102.js format 1`] = `
====================================options=====================================
parsers: ["babel", "babel-flow", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
a(// :
1
);
a(/* : */1);
a(// ::
1
);
a(/* :: */1);
=====================================output=====================================
a(
  // :
  1
);
a(/* : */ 1);
a(
  // ::
  1
);
a(/* :: */ 1);

================================================================================
`;

exports[`issue-7748.js format 1`] = `
====================================options=====================================
parsers: ["babel", "babel-flow", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
a(
  // ::
  1
);
=====================================output=====================================
a(
  // ::
  1
);

================================================================================
`;
